--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,15 @@ services:
       ports:
         - '6379:6379'
       volumes:
-        - redis_data:/data
+        - redis_volume:/data
+      healthcheck:
+        test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+        interval: 1s
+        timeout: 3s
+        retries: 5
+      depends_on:
+        elasticsearch:
+          condition: service_healthy
 
     etl:
       image: ghcr.io/tyshbyr/etl:latest
@@ -65,12 +73,15 @@ services:
       ports:
           - '8000:8000'
       depends_on:
-        - postgres
-        - elasticsearch 
-        - etl
+        redis:
+          condition: service_healthy
 
 volumes:
     pg_volume:
+      name: pg_volume
     elastic_volume:
+      name: elastic_volume
     storage:
-    redis_data:
+      name: storage
+    redis_volume:
+      name: redis_volume
