--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,8 @@ services:
         - .env
       ports:
           - '8000:8000'
+      environment:
+        - PYTHONPATH=/app/
       depends_on:
         redis:
           condition: service_healthy
