--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ orjson==3.8.10
 pydantic==1.10.7
 uvicorn==0.21.1
 uvloop==0.17.0 ; sys_platform != "win32" and implementation_name == "cpython"
+aioredis==2.0.1
