--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ MAIN_CHUNK=200 #размер чанка выгрузки из postgres и заг
 MAIN_DELAY=10 #задержка проверки изменений
 DISCOVERY_TYPE=single-node #аргументы для старта elasticsearch
 XPACK_SEC_ENABLE=false #аргументы для старта elasticsearch
+REDIS_HOST=redis
+REDIS_PORT=6379
