fix style and config.py

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,4 @@ DISCOVERY_TYPE=single-node #аргументы для старта elasticsearch
 XPACK_SEC_ENABLE=false #аргументы для старта elasticsearch
 REDIS_HOST=redis
 REDIS_PORT=6379
+PROJECT_NAME=movies
