--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
           condition: service_healthy
 
     etl:
-      image: ghcr.io/tyshbyr/etl:0.0.3
+      image: ghcr.io/tyshbyr/etl:0.0.4
       env_file:
         - .env
       volumes:
@@ -66,13 +66,27 @@ services:
       build: .
       env_file:
         - .env
-      ports:
-          - '8000:8000'
-      environment:
-        - PYTHONPATH=/app/
+      healthcheck:
+        test: ["CMD", "curl", "--fail", "http://localhost:8000/api/openapi"]
+        interval: 15s
+        timeout: 5s
+        retries: 5
       depends_on:
         redis:
           condition: service_healthy
+      expose:
+        - 8000
+
+    nginx:
+      image: nginx:1.23.4-alpine
+      volumes:
+        - ./nginx.conf:/etc/nginx/nginx.conf:ro
+        - ./configs:/etc/nginx/conf.d:ro
+      depends_on:
+        api:
+          condition: service_healthy
+      ports:
+        - "80:80"
 
 volumes:
     pg_volume:
