--- a/tests/functional/.env.example
+++ b/tests/functional/.env.example
@@ -8,3 +8,7 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 
 SERVICE_URL=http://api:8000/api/v1/
+
+BO_START_SLEEP_TIME=0.1
+BO_FACTOR=2
+BO_BORDER_SLEEP_TIME=10
