add jwt verification

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -1,9 +1,9 @@
 DB_NAME=movies_database #название базы данных
 DB_USER=app #имя пользователя бд
 DB_PASSWORD=123qwe #пароль пользователя бд
-DB_HOST=postgres #host базы данных
+DB_HOST=localhost #host базы данных
 DB_PORT=5432  #port базы данных
-ES_HOST=http://elasticsearch #host elasticsearch
+ES_HOST=http://127.0.0.1 #host elasticsearch
 ES_PORT=9200 #port elasticsearch
 ES_BULK_MAX_RETYS=10 #максимальное количество попытко отправки данных
 ES_BULK_RETYS_SLEEP=1 #время при неудачной попытке отправить данные
@@ -14,7 +14,7 @@ MAIN_CHUNK=200 #размер чанка выгрузки из postgres и заг
 MAIN_DELAY=10 #задержка проверки изменений
 DISCOVERY_TYPE=single-node #аргументы для старта elasticsearch
 XPACK_SEC_ENABLE=false #аргументы для старта elasticsearch
-REDIS_HOST=redis
+REDIS_HOST=localhost
 REDIS_PORT=6379
 PROJECT_NAME=movies
 PUBLIC_KEY=jwt-key.pub
