--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ uvloop==0.17.0 ; sys_platform != "win32" and implementation_name == "cpython"
 aioredis==2.0.1
 gunicorn==20.1.0
 python-dotenv~=1.0.0
+
+PyJWT~=2.7.0
+pytest~=7.3.1
+redis~=4.5.4
+aiohttp~=3.7.2
